Source/SmallBasic.Editor/Components/Toolbox/MonacoEditor.scss
editor-container {
    padding-top: 20px;
    padding-bottom: 20px;
    box-sizing: border-box;
    flex-grow: 1;
    // absolute position is required to layout the editor correctly.
    // This container needs to not be attached to it's parent width,
    // So that its width can shrink/grow accourding to the page.
    position: absolute;

    editor {
        .wavy-line {
            display: inline-block;
            position: relative;
            background: url(data:image/gif;base64,R0lGODdhBAADAPEAANv///8AAP///wAAACwAAAAABAADAEACBZQjmIAFADs=) bottom repeat-x;
        }

        .error-line-glyph {
            margin-left: 14px;
            @include set-background-image("EditPage/Error.svg", 20px, 20px);
        }

        .debugger-line-highlight {
            background: #FEF849;
        }
    }
}

